[gd_scene load_steps=12 format=3 uid="uid://cqd2qppk8y5ja"]

[ext_resource type="Script" uid="uid://d03rqfnkk2ys6" path="res://Player/Ships/EmeraldWyrm/Abilities/EmeraldShell/EmeraldShell.gd" id="1_71boy"]
[ext_resource type="Texture2D" uid="uid://3xxtny84pidv" path="res://Player/Ships/EmeraldWyrm/Abilities/EmeraldShell/assets/EmeraldShell.webp" id="2_bitod"]
[ext_resource type="AudioStream" uid="uid://dvt04ijxbmj31" path="res://Player/Ships/EmeraldWyrm/Abilities/EmeraldShell/assets/DeploySound.ogg" id="3_gstu0"]
[ext_resource type="AudioStream" uid="uid://dd5tonlbxhlxa" path="res://Player/Ships/EmeraldWyrm/Abilities/EmeraldShell/assets/HitSound.ogg" id="4_wm4mn"]
[ext_resource type="AudioStream" uid="uid://drx4ki8wddvvc" path="res://Player/Ships/EmeraldWyrm/Abilities/EmeraldShell/assets/DestroyedSound.ogg" id="5_7lsq6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ftb5v"]
radius = 125.064

[sub_resource type="Animation" id="Animation_wm4mn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DeploySound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DestroyedSound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitSound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_gstu0"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DeploySound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7lsq6"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DestroyedSound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_71boy"]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.72, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0.0405029, 0.0223527, 1), Color(1, 0.292348, 0.297151, 1), Color(0.887547, 0, 0.14804, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitSound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_54ob5"]
_data = {
&"RESET": SubResource("Animation_wm4mn"),
&"fade_in": SubResource("Animation_gstu0"),
&"fade_out": SubResource("Animation_7lsq6"),
&"hit": SubResource("Animation_71boy")
}

[node name="EmeraldShell" type="Area2D"]
collision_layer = 0
collision_mask = 10
script = ExtResource("1_71boy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_bitod")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ftb5v")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_54ob5")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="DeploySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_gstu0")
bus = &"efx"

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wm4mn")
bus = &"efx"

[node name="DestroyedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_7lsq6")
bus = &"efx"

[connection signal="area_entered" from="." to="." method="_on_enemy_entered"]
[connection signal="body_entered" from="." to="." method="_on_enemy_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
